* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Strong typed the module.

* Wed Dec 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated catalysts to take defaults from simp_options

* Wed Nov 23 2016 Jeanne Greulich <jgreulich@onypoint.com> - 5.0.0-2016
- Bump major version for SIMP 6

* Fri Nov 18 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.3-0
- Removed compliance map dependency

* Tue May 17 2016 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.1-0
- Sanitize code for `STRICT_VARIABLES=yes`

* Thu Mar 10 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-10
- Updated for Puppet 4 compatibility

* Wed Feb 10 2016 Ralph Wright <ralph.wright@onypoint.com> - 4.1.0-9
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-8
- migration to simplib and simpcat (lib/ only)

* Fri Jul 31 2015 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-7
- Updated logging configuration to work with new rsyslog module.

* Thu Feb 19 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-6
- Changed calls directly to /etc/init.d/rsyslog to '/sbin/service rsyslog' so
  that both RHEL6 and RHEL7 are properly supported.
- Migrated to the new 'simp' environment.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-5
- Changed puppet-server requirement to puppet

* Tue Jul 08 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-4
- Modified the grub regex to work with grub2.

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-3
- Removed MD5 file checksums for FIPS compliance.

* Mon Apr 07 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-2
- Added validation for instance variables.
- Added spec tests.

* Sat Feb 15 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-1
- Converted all boolean strings to native booleans.

* Fri Nov 08 2013 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-0
- Rearchitected the entire module to eliminate all singleton defines