@@ -1,6 +1,6 @@
 require 'spec_helper'
 
-describe 'aide::add_rules' do
+describe 'aide::rule' do
   context 'supported operating systems' do
     on_supported_os.each do |os, facts|
 
